begin moving translation logic