@@ -1,13 +1,13 @@
 package cyphersql;
 
+import cyphersql.api.exception.TranslationFailedException;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 
 import java.io.File;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 public class CypherTranslatorTest {
     private final CypherTranslator translator = new CypherTranslator();
@@ -15,13 +15,25 @@ public class CypherTranslatorTest {
     @Disabled("Required graph DB does not exist")
     @Test
     public void databaseDumpsSuccessfully() {
-        Path dbPath = Paths.get("src", "test", "resources", "databases", "graph.db");
-        Path dumpLocation = Paths.get("src", "test", "resources", "databases", "dump", "graph_dump.txt");
+        Path dbPath = Path.of("src", "test", "resources", "databases", "graph.db");
+        Path dumpLocation = Path.of("src", "test", "resources", "databases", "dump", "graph_dump.txt");
 
         translator.dumpDatabase(dbPath, dumpLocation);
         File dumpFile = dumpLocation.toFile();
 
         assertTrue(dumpFile.exists());
         assertTrue(dumpFile.length() > 0);
+    }
+
+    @Test
+    public void translatesMatchNodeWithCount() {
+        String query = "MATCH (n) RETURN count(*) AS count";
+        assertThrows(TranslationFailedException.class, () -> translator.translate(query, new PostgreSQLTranslator()));
+    }
+
+    @Test
+    public void translatesCreateNode() {
+        String query = "CREATE (_0: `Movie` {`released`: 1999, `tagline`: \"Welcome to the Real World\", `title`: \"The Matrix\"})";
+        assertThrows(TranslationFailedException.class, () -> translator.translate(query, new PostgreSQLTranslator()));
     }
 }
