@@ -7,7 +7,6 @@ import org.junit.jupiter.api.Test;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -15,7 +14,7 @@ import java.util.List;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class FileUtilsTest {
-    private final Path file = Paths.get("src", "test", "resources", "files", "sample_text");
+    private final Path file = Path.of("src", "test", "resources", "files", "sample_text");
     private List<String> oldContents = new ArrayList<>();
 
     @BeforeEach
